# medai_dossier

./: .gitignore  README.md  pyproject.toml
docs/: PROJECT_MEMORY.md
flask_ui/: app.py
flask_ui/templates/: base.html  dashboard.html
flask_ui/templates/dossier/: create.html  detail.html
src/: __init__.py
src/api/: main.py
src/api/models/: __init__.py  dossier.py
src/api/routers/: dossiers.py  economics.py  evidence.py  hta.py
src/api/services/: dossier_service.py
src/core/: config.py
src/services/: economics_service.py  evidence_service.py  hta_service.py
streamlit_pilot/: __init__.py  app.py
streamlit_pilot/components/: __init__.py  dossier_detail_edit.py  dossier_management.py  economics_view.py  evidence_tracking.py  template_editor.py  template_management.py  template_preview.py  value_dossier_structure.py
streamlit_pilot/utils/: __init__.py  navigation.py  session_state.py
tests/services/: test_economics_service.py  test_evidence_service.py  test_hta_service.py
tests/unit/: test_dossier_service.py
